my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ECONDT/ECONDT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ECONDT.dml:18:5: error ECONDT: conditional templates are not allowed
